maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:31: error: '(' expected but identifier found.
  }else if hasTopWall(x, y){
           ^JediEscaper:46: error: illegal start of simple expression
 }
 ^